--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.0.5",
+    "@dnd-kit/sortable": "^7.0.1",
+    "@dnd-kit/utilities": "^3.2.0",
+    "@hookform/resolvers": "^2.8.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "@hookform/resolvers": "^2.8.10",
     "react-hook-form": "^7.31.2",
     "react-loading-skeleton": "^3.1.0",
     "react-router": "^6.2.2",
